feat: add GET profile API
