# api.yml
@@ -60,8 +60,37 @@ paths:
             $ref: "#/components/responses/ErrorResponse"
           '500':
             $ref: "#/components/responses/ErrorResponse"
+  /profile:
+    get:
+      summary: Get user profile
+      operationId: getUserProfile
+      security:
+        - bearerAuth: []
+      responses:
+          '200':
+            $ref: "#/components/responses/ProfileResponse"
+          '400':
+            $ref: "#/components/responses/ErrorResponse"
+          '404':
+            $ref: "#/components/responses/ErrorResponse"
+          '500':
+            $ref: "#/components/responses/ErrorResponse"
 
 components:
+  securitySchemes:
+      bearerAuth:
+        type: http
+        scheme: bearer
+        bearerFormat: JWT
+
+  parameters:
+    Authorization:
+      name: Authorization
+      in: header
+      required: true
+      schema:
+        type: string
+
   requestBodies:
     RegistrationRequest:
       content:
@@ -101,6 +130,12 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/LoginResponse"
+    ProfileResponse:
+      description: Return authenticated user profile
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ProfileResponse"
 
   schemas:
     HelloResponse:
@@ -155,9 +190,19 @@ components:
         - phone_number
         - password
     LoginResponse:
-        type: object
-        properties:
-          token:
-            type: string
-        required:
-          - token
+      type: object
+      properties:
+        token:
+          type: string
+      required:
+        - token
+    ProfileResponse:
+      type: object
+      properties:
+        full_name:
+          type: string
+        phone_number:
+          type: string
+      required:
+        - full_name
+        - phone_number
